CKAD-CertMK/Services and Networking/Network Policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: polict-to-restrict-access-to-db
spec:
  podSelector:
    matchLabels:
       purpose: db-pod
  policyTypes:
  - Ingress:
  ingress:
  - from: 
    - podSelector:
         matchlabels:
            purpose: backend-pod
      namespaceSelector:
        matchLables:
           name: dev 
    ports:
    - protocol: tcp
      port: 3306
